# forge1

./: .env.staging  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrep.yml  DEPLOYMENT_FIXES.md  DEPLOYMENT_SUMMARY.md  LICENSE  Makefile  README.md  deploy.sql  deploy_auth.sql  docker-compose.local.yml  docker-compose.yml  frontend_eslint_config_backup.mjs  frontend_next_config_backup.ts  frontend_tailwind_config_backup.ts  index.html  package-lock.json  package.json  requirements.txt  staticwebapp.config.json  tailwind.config.ts  tsconfig.json  vite.config.ts
backend/: .env.docker  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements.txt  test_adapters.py  uvicorn.out
backend/alembic/: env.py
backend/alembic/versions/: 0002_core_tables.py  0010_add_rag_tables.py  0011_merge_heads.py  0a0d0717a24e_init_placeholder.py  12_auth_v2_models.py  (+20 more)
backend/app/: main.py
backend/examples/: memory_demo.py  orchestrator_demo.py
backend/scripts/: e2e_employee_demo.sh  gen_sdk.sh  migrate_in_container.sh
backend/tests/: conftest.py  test_ai_supervisor.py  test_auth.py  test_canary_shadow.py  test_concurrency_roles.py  test_deployment_runtime.py  test_employee_api_protected.py  test_employee_builder.py  test_end_to_end_builder_runtime.py  test_end_to_end_multi_tenant.py  test_feature_flags.py  test_health.py  test_ledger_policy_sandbox.py  test_memory.py  test_memory_api.py  test_memory_facts_rank.py  test_metrics_api.py  test_migrations_tables.py  test_orchestrator.py  test_proactivity.py  test_promotion.py  test_rag_incremental_hybrid.py  test_rate_limit_and_audit.py  test_reviews_api.py  test_rollout.py  test_router_thompson.py  test_tenant_scoping.py  test_tool_registry.py  test_vector_namespace.py
cli/forge1_admin/: README.md  pyproject.toml
shared/: README.md  pyproject.toml
shared/events/: schema.py
shared/forge1_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shared/shared/: __init__.py
shared/tests/: test_runner_aggregation.py  test_yaml_load.py
testing-app/: Dockerfile  README.md  docker-compose.testing.yml  env.testing.example  pyproject.toml  requirements.txt  testing_local.db
testing-app/app/: __init__.py  config.py  main.py  models.py
testing-app/testing_app/: __init__.py
testing-app/tests/: conftest.py  test_chaos_smoke.py  test_health.py  test_load_k6_locust_smoke.py  test_master_ai.py  test_reports_signing.py  test_run_suite.py  test_runs_flow.py  test_zap_integration.py
(+635 files in other folders)
