[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge1-admin"
version = "0.1.0"
description = "Forge 1 Admin CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [ { name = "Forge1 Team" } ]
dependencies = [
  "typer[all]>=0.12",
  "httpx>=0.27",
  "rich>=13.7",
]

[project.scripts]
forge1-admin = "forge1_admin.cli:app"


